feat: add GET   /{version}/repair-requests/:id/items -> Get line items for repair request id
