# src/Applications/Services/IRepairRequestService.ts
@@ -1,4 +1,5 @@
 import { RepairRequestDto } from "../DataTransferObjects/RepairRequest/RepairRequestDto";
+import { RepairRequestItemDto } from "../DataTransferObjects/RepairRequest/RepairRequestItemDto";
 import { RepairRequestForCreateDto } from "../DataTransferObjects/RepairRequest/RepairRequestForCreateDto";
 import { RepairRequestForUpdateDto } from "../DataTransferObjects/RepairRequest/RepairRequestForUpdateDto";
 import { RepairRequestParameter } from "../../Domains/RequestFeatures/RepairRequestParameter";
@@ -8,6 +9,7 @@ export interface IRepairRequestService
 {
     GetListRepairRequest(parameters: RepairRequestParameter): Promise<PagedResult<RepairRequestDto>>;
     GetRepairRequest(id: number): Promise<RepairRequestDto>;
+    GetRepairRequestItems(id: number): Promise<RepairRequestItemDto[]>;
     CreateRepairRequest(repairRequestForCreateDto: RepairRequestForCreateDto): Promise<RepairRequestDto>;
     UpdateRepairRequest(id: number, repairRequestForUpdateDto: RepairRequestForUpdateDto): Promise<RepairRequestDto>;
     DeleteRepairRequest(id: number): Promise<void>;
